--- a/OtherParts/res/values/strings.xml
+++ b/OtherParts/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
+<!-- Copyright (C) 2014 The OmniROM Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,8 +13,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<!-- Feature for devices with a hardware step counter. -->
-<permissions>
-    <feature name="android.hardware.sensor.stepcounter" />
-</permissions>
+<resources>
+    <string name="app_name">U810</string>
+    <string name="category_gestures_title">Wake Gestures</string>
+    <string name="double_tap_wake_title_head">Double tap to wake</string>
+    <string name="double_tap_wake_summary_head">Double tap on screen will wake the device</string>
+    <string name="advanced_settings">Advanced</string>
+</resources>
